--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>js calismalarim</h1>
     
 
-   <script src="String.js"></script>
+   <script src="Array_Dizi.js"></script>
 </body>
 </html>
